Optimizes styles to fix undesired scrolling and alignment on different screens (LH-da69).

--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -18,7 +18,6 @@
 }
 
 .label {
-  margin-top: 20px;
   display: block;
   width: 160px;
 }
@@ -29,7 +28,7 @@
 }
 
 .table-container {
-  margin: 20px auto;
+  margin: 20px auto 0;
   width: 100%;
   max-width: 304px;
   overflow-x: auto;
