--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   --secondary: #202020;
   --light-accent: #E0E0E0;
   --dark-accent: #070707;
-  padding-bottom: 200px;
   font-size: 16px;
   font-weight: 400;
   color: var(--secondary);
